--- a/assets/style.css
+++ b/assets/style.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     padding: 0;
     margin: 0;
+    background-color: #181325;
 }
 
 .jumbotron {
