--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,7 @@ nav {
     padding: 10px;
     position: sticky;
     top: 0;
+    box-shadow: 0 4px 12px 2px #0f0c17;
 }
 
 nav li {
@@ -52,6 +53,12 @@ nav a {
     margin-right: 25px;
 }
 
+nav a:hover {
+    color: orange;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
 @media screen and (max-width: 1000px) {
 
     .jumbotron {
@@ -62,5 +69,9 @@ nav a {
     .jumbotron p {
         width: 80%;
         font-size: 16px;
+    }
+
+    nav {
+        text-align: center;
     }
 }
