--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,10 @@ body {
     color: white;
 }
 
+p {
+    line-height: 27px;
+}
+
 .jumbotron {
     width: 100%;
     min-height: 350px;
@@ -60,10 +64,42 @@ nav a:hover {
     text-decoration: underline;
 }
 
+#content {
+    padding: 50px;
+}
+
+#perkenalan {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.content h2 {
+    font-size: 60px;
+}
+
+.content span {
+    color: orange;
+}
+
+.content p {
+    width: 100%;
+}
 
 
+.img-content img {
+    width: 320px;
+    border-radius: 15px;
+    border: 4px solid orange;
+    box-shadow: 20px 20px 0 orange;
+}
 
-
+.img-content img:hover {
+    transform: rotate(15deg);
+    overflow: hidden;
+    transition: ease-in-out 0.5s;
+    cursor: pointer;
+}
 
 @media screen and (max-width: 1000px) {
 
@@ -81,5 +117,25 @@ nav a:hover {
         text-align: center;
     }
 
+    #content {
+        padding: 30px;
+        text-align: center;
+    }
+
+    #perkenalan {
+        flex-direction: column-reverse;
+    }
+
+    .img-content img {
+        width: 250px;
+    }
+
+    .content h2 {
+        font-size: 40px;
+    }
+    
+    .content span {
+        color: orange;
+    }
     
 }
