--- a/assets/style.css
+++ b/assets/style.css
@@ -38,6 +38,10 @@ p {
     font-size: 18px;
 }
 
+header {
+    display: inline;
+}
+
 nav {
     background-color: #251D3A;
     padding: 10px;
@@ -74,6 +78,10 @@ nav a:hover {
     margin-top: 30px;
 }
 
+.content {
+    position: relative;
+}
+
 .content h2 {
     font-size: 60px;
 }
@@ -86,19 +94,28 @@ nav a:hover {
     width: 80%;
 }
 
+.btn-explore {
+    padding: 20px 60px;
+    position: absolute;
+    background-color: orange;
+    margin-top: 30px;
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.btn-explore:hover {
+    background-color: rgb(232, 152, 3);
+    box-shadow: 8px 8px 0 0 white;
+}
 
 .img-content img {
     width: 320px;
     border-radius: 15px;
     border: 4px solid orange;
     box-shadow: 20px 20px 0 orange;
-}
-
-.img-content img:hover {
-    transform: rotate(15deg);
-    overflow: hidden;
-    transition: ease-in-out 0.5s;
-    cursor: pointer;
 }
 
 @media screen and (max-width: 1000px) {
@@ -142,4 +159,15 @@ nav a:hover {
         color: orange;
     }
     
+    .btn-explore {
+        padding: 20px 50px;
+        position: relative;
+        background-color: orange;
+        top: 50px;
+        color: white;
+        text-decoration: none;
+        font-size: 16px;
+        font-weight: bold;
+        border-radius: 10px;
+    }
 }
