--- a/assets/style.css
+++ b/assets/style.css
@@ -94,7 +94,7 @@ nav a:hover {
     width: 80%;
 }
 
-.btn-explore {
+.btn {
     padding: 20px 60px;
     position: absolute;
     background-color: orange;
@@ -106,9 +106,11 @@ nav a:hover {
     border-radius: 10px;
 }
 
-.btn-explore:hover {
+.btn:hover {
     background-color: rgb(232, 152, 3);
     box-shadow: 8px 8px 0 0 white;
+    transition: 0.3s;
+    border: 2px solid white;
 }
 
 .img-content img {
@@ -159,7 +161,7 @@ nav a:hover {
         color: orange;
     }
     
-    .btn-explore {
+    .btn {
         padding: 20px 50px;
         position: relative;
         background-color: orange;
