Styling section skills highlight

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,10 +78,6 @@ nav a:hover {
     margin-top: 30px;
 }
 
-.content {
-    position: relative;
-}
-
 .content h2 {
     font-size: 60px;
 }
@@ -94,25 +90,6 @@ nav a:hover {
     width: 80%;
 }
 
-.btn {
-    padding: 20px 60px;
-    position: absolute;
-    background-color: orange;
-    margin-top: 30px;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 10px;
-}
-
-.btn:hover {
-    background-color: rgb(232, 152, 3);
-    box-shadow: 8px 8px 0 0 white;
-    transition: 0.3s;
-    border: 2px solid white;
-}
-
 .img-content img {
     width: 320px;
     border-radius: 15px;
@@ -120,20 +97,13 @@ nav a:hover {
     box-shadow: 20px 20px 0 orange;
 }
 
-#skill-highlight {
-    position: relative;
-}
-
-.big-header {
-    position: absolute;
-    margin-top: 150px;
-    font-size: 100px;
-    color: orange;
-    text-shadow: 8px 8px 0 white;
+#skills-highlight {
+    margin-top: 80px;
 }
 
 .big-header h1 {
-    margin: 0;
+    font-size: 80px;
+    margin: 20px auto;
 }
 
 @media screen and (max-width: 1000px) {
@@ -176,23 +146,9 @@ nav a:hover {
     .content span {
         color: orange;
     }
-    
-    .btn {
-        padding: 20px 50px;
-        position: relative;
-        background-color: orange;
-        top: 50px;
-        color: white;
-        text-decoration: none;
-        font-size: 16px;
-        font-weight: bold;
-        border-radius: 10px;
-    }
 
-    .big-header {
-        position: absolute;
-        margin-top: 150px;
-        font-size: 60px;
-        text-align: center;
+    .big-header h1 {
+        font-size: 40px;
+        text-align: left;
     }
 }
