--- a/assets/style.css
+++ b/assets/style.css
@@ -101,10 +101,47 @@ nav a:hover {
     margin-top: 80px;
 }
 
-.big-header h1 {
-    font-size: 80px;
-    margin: 20px auto;
+.container-scroll {
+    top: 30px;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
+
+.container-scroll .scroll {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.container-scroll .scroll div h3 {
+    margin: 0;
+    font-size: 80px;
+    white-space: nowrap;
+    animation: animate 10s linear infinite;
+}
+
+.container-scroll .scroll div:nth-child(2) {
+    animation-delay: 0ms;
+}
+
+.text-orange {
+    color: orange;
+}
+
+@keyframes animate {
+    0%
+    {
+        transform: translateX(0%);
+    }
+
+    100%
+    {
+        transform: translateX(-100%);
+    }
+}
+
 
 @media screen and (max-width: 1000px) {
 
@@ -147,8 +184,12 @@ nav a:hover {
         color: orange;
     }
 
-    .big-header h1 {
+    #skills-highlight {
+        margin-top: 20px;
+    }
+
+    .container-scroll .scroll div h3 {
         font-size: 40px;
-        text-align: left;
+        margin: 0;
     }
 }
