--- a/assets/style.css
+++ b/assets/style.css
@@ -63,6 +63,7 @@ nav li {
 nav a {
     color: white;
     text-decoration: none;
+    font-size: 20px;
     font-weight: 400;
     margin-right: 25px;
 }
@@ -74,7 +75,7 @@ nav a:hover {
 }
 
 #content {
-    padding: 50px;
+    padding: 30px;
 }
 
 #perkenalan {
@@ -94,9 +95,10 @@ nav a:hover {
 
 .content p {
     width: 80%;
+    font-size: 18px;
 }
 
-.img-content img {
+.img-profile img {
     padding-right: 0;
     width: 320px;
     border-radius: 15px;
@@ -181,6 +183,41 @@ figure .img-project {
     box-shadow: 15px 15px 0 orange;
 }
 
+.btn {
+    padding: 15px 20px;
+    background-color: orange;
+    color: #251D3A;
+    border: 2px solid white;
+    border-radius: 10px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.btn:hover {
+    box-shadow: 4px 8px white;
+    transition: 0.5s ease-in-out;
+}
+
+#coding-journeys {
+    display: flex;
+    margin-top: 80px;
+}
+
+.img-code figure {
+    margin: 0;
+}
+
+.img-code img {
+    width: 450px;
+    border-radius: 15px;
+    border: 4px solid orange;
+    box-shadow: 20px 20px 0 orange;
+}
+
+#coding-journeys .content {
+    padding-left: 100px;
+}
+
 @keyframes animate {
     0%
     {
@@ -214,6 +251,10 @@ figure .img-project {
         text-align: center;
     }
 
+    nav a {
+        font-size: 16px;
+    }
+
     #content {
         padding: 30px;
         text-align: center;
@@ -223,16 +264,21 @@ figure .img-project {
         flex-direction: column-reverse;
     }
 
-    .img-content img {
+    .img-profile img {
         width: 250px;
     }
 
     .content h2 {
         font-size: 40px;
     }
+
+    #perkenalan .content {
+        padding: 15px;
+    }
     
     .content p {
         width: 100%;
+        font-size: 16px;
     }
 
     .content span {
@@ -266,5 +312,22 @@ figure .img-project {
     figure .img-project {
         border-radius: 12px;
         width: 100%;
+    }
+
+    #coding-journeys {
+       flex-direction: column;
+       text-align: center;
+    }
+    
+    .img-code img {
+        width: 250px;
+    }
+
+    #coding-journeys .content {
+        padding: 15px;
+    }
+
+    #coding-journeys .content p {
+        margin-bottom: 50px;
     }
 }
