Fix the img path and delete figcaption

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,7 +28,7 @@ hr {
 .jumbotron {
     width: 100%;
     min-height: 350px;
-    background-image: url(/assets/images/computer.jpg);
+    background-image: url('../assets/images/computer.jpg');
     object-fit: cover;
     object-position: center;
     padding: 60px;
@@ -228,6 +228,14 @@ figure .img-project {
 
 #frameworks figure img {
     width: 150px;
+}
+
+.frameworks-container figure img {
+    width: 150px;
+}
+
+.frameworks-container figure {
+    text-align: center;
 }
 
 
