--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@ body {
     margin: 0;
     background-color: #181325;
     color: white;
+    overflow-x: hidden;
 }
 
 p {
@@ -306,8 +307,24 @@ figure .img-project {
     }
 
     nav ul {
-        padding: 0;
-        display: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 40vh;
+        background-color: #251D3A;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        padding: 100px 0 50px 0;
+        z-index: -1;
+        transform: translateX(100%);
+        box-shadow: 0 4px 12px 2px #0f0c17;
+    }
+
+    nav ul.active {
+        transform: translateX(0);
     }
 
     nav a {
@@ -318,6 +335,7 @@ figure .img-project {
         display: flex;
     }
 
+   
     #content {
         padding: 30px;
         text-align: center;
