--- a/assets/style.css
+++ b/assets/style.css
@@ -283,14 +283,30 @@ figure .img-project {
 
 /* End : Coding Journeys */
 
-.item-box img {
-    width: 150px;
+/* Start : Frameworks */
+
+.frameworks-container {
+    display: flex;
+    gap: 30px;
 }
 
-.stroke {
-    width: 350px;
-    border: 2px solid orange;
+.item-box {
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    border: 2px dashed orange;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #251D3A;
 }
+
+.item-box img {
+    width: 80px;
+}
+
+/* End : Frameworks */
 
 /* Animation */
 
